# qlfactor

./: .env.example  API.md  README.md  mkdocs.yml  pyproject.toml  requirement.md
API/: index.html
docs/: API.md  getting-started.md  index.md
search/: search_index.json
site/: 404.html  index.html
site/API/: index.html
site/getting-started/: index.html
site/search/: search_index.json
src/: config.py  download.py  factor_engine.py
src/qlfactor/: __init__.py  cli.py  config.py  download.py  factor_engine.py
tests/: test_config.py  test_factor_analytics.py  test_formula_functions.py
