[project]
name = "qlfactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "lib-pybroker>=1.2.12",
    "pyarrow>=23.0.1",
    "pyecharts>=2.1.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "tushare>=1.4.29",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
